syntax = "proto3";

package my_protos;

message TestMessage {
  int32 field_one = 1;
  string field_two = 2;
}
